lintian (2.5.5) UNRELEASED; urgency=low

  * Summary of tag changes:
    + Added:
      - dependency-is-not-multi-archified
      - preinst-uses-dpkg-maintscript-helper-without-predepends
      - shlib-in-multi-arch-foreign-package
    + Removed:
      - uploader-address-missing

  * checks/*:
    + [NT] Fixed assumptions about certain fields being present.
      Where needed, Lintian will make guesses to the most likely
      value (or the least "broken" value).
  * checks/cruft:
    + [NT] Added dh-autoreconf as a build-depends alternative to
      libtool for suppressing ancient-libtool warning.  Thanks to
      Felix Geyer for the report.  (Closes: #650325)
  * checks/debhelper:
    + [NT] Do not check executable debhelper files for brace
      expansion if compat is 9 (or greater).  It may be allowed by
      tool interpretting the file.
  * checks/fields{,.desc}:
    + [JW] Properly handle uploader names with commas.
      (Closes: #485705)
    + [NT] Removed uploader-address-missing tag.
    + [NT] Added section-mapping for (some) zope packages.  This
      fixes some false-positives where python-zope packages were
      wrongly identified as belong to the python section.
    + [NT] Fixed an issue where "doc-pkg-depends-on-main-pkg" would
      only be triggered if it was a "pre-depends" relation.
  * checks/files:
    + [JW,NT] Skip "Multi-Arch: same" check of gzip files if their
      install path contains the architecture.  (Closes: #650665)
    + [JW]  Fixed a false-negative "empty-binary-package" if the
      package contained the /u/s/doc/$pkg symlink.
      (Closes: #650959)
    + [NT] Allow fonts in packages starting with "fonts-".  This
      completes the fix for #646838.  Thanks to أحمد المحمودي
      for the follow up report.  (Closes: #651045)
  * checks/group-check{,.desc}:
    + [NT] Check for file conflicts in binaries built from the same
      source package.  (Closes: #293838)
    + [JW] Added check for incomplete Multi-arch'ification.