@@ -1,0 +1,2 @@
+#! /bin/sh
+# This is acceptable (though useless)
