@@ -1,0 +1,5 @@
+Testname: debhelper-executable-files
+Sequence: 6000
+Version: 1.0
+Description: Tests related to executable packaging files
+Test-For: package-file-is-executable
