@@ -3,6 +3,8 @@ lintian (2.5.5) UNRELEASED; urgency=low
   * Summary of tag changes:
     + Added:
       - dependency-is-not-multi-archified
+      - executable-debhelper-file-without-being-executable
+      - package-file-is-executable
       - preinst-uses-dpkg-maintscript-helper-without-predepends
       - shlib-in-multi-arch-foreign-package
     + Removed:
@@ -20,6 +22,9 @@ lintian (2.5.5) UNRELEASED; urgency=low
     + [NT] Do not check executable debhelper files for brace
       expansion if compat is 9 (or greater).  It may be allowed by
       tool interpretting the file.
+    + [NT] Added checks for handling executable files in the
+      debian dir.  Thanks to Joey Hess and Arno Töll for the
+      reports.  (Closes: #651572, #651330)
   * checks/fields{,.desc}:
     + [JW] Properly handle uploader names with commas.
       (Closes: #485705)
